add secondpost and third post

--- a/output/categories.html
+++ b/output/categories.html
@@ -3,19 +3,21 @@
 <head>
         <meta charset="utf-8" />
         <title>渡りの日々. - Categories</title>
-        <link rel="stylesheet" href="/theme/css/main.css" />
+        <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">渡りの日々. </a></h1>
+                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々. </a></h1>
                 <nav><ul>
-                    <li><a href="/category/tesuto.html">テスト</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/sonota.html">その他</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tesuto.html">テスト</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on 渡りの日々.</h1>
     <ul>
-        <li><a href="/category/tesuto.html">テスト</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/sonota.html">その他</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/tesuto.html">テスト</a> (2)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
