--- a/output/authors.html
+++ b/output/authors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="en">
 <head>
         <meta charset="utf-8" />
         <title>渡りの日々. - Authors</title>
@@ -8,36 +8,26 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々. </a></h1>
+                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/sonota.html">その他</a></li>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/tesuto.html">テスト</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on 渡りの日々.</h1>
     <ul>
-        <li><a href="https://blog.watarinohibi.tokyo/author/shosoya.html">s.hosoya</a> (3)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/author/shosoya.html">s.hosoya</a> (1)</li>
     </ul>
 </section>
 
         <section id="extras" class="body">
-                <div class="blogroll">
-                        <h2>links</h2>
-                        <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
-                        </ul>
-                </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://twitter.com/syoutin">twitter</a></li>
+                            <li><a href="https://github.com/mollinaca">github</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
