--- a/output/archives.html
+++ b/output/archives.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -17,6 +18,8 @@
 <h1>Archives for 渡りの日々.</h1>
 
 <dl>
+    <dt>火 17 3月 2020</dt>
+    <dd><a href="https://blog.watarinohibi.tokyo/about_this_blog.html">このサイトの技術スタックについて</a></dd>
     <dt>月 16 3月 2020</dt>
     <dd><a href="https://blog.watarinohibi.tokyo/FirstPost.html">最初の投稿</a></dd>
 </dl>
