--- a/output/authors.html
+++ b/output/authors.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -17,7 +18,7 @@
 <section id="content" class="body">
     <h1>Authors on 渡りの日々.</h1>
     <ul>
-        <li><a href="https://blog.watarinohibi.tokyo/author/shosoya.html">s.hosoya</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/author/shosoya.html">s.hosoya</a> (2)</li>
     </ul>
 </section>
 
