--- a/output/categories.html
+++ b/output/categories.html
@@ -10,12 +10,14 @@
         <header id="banner" class="body">
                 <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on 渡りの日々.</h1>
     <ul>
+        <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a> (1)</li>
     </ul>
