--- a/output/tags.html
+++ b/output/tags.html
@@ -10,6 +10,7 @@
         <header id="banner" class="body">
                 <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a></li>
                     <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
@@ -18,6 +19,7 @@
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (1)</li>
