--- a/output/tags.html
+++ b/output/tags.html
@@ -21,6 +21,7 @@
     <ul>
         <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (2)</li>
     </ul>
