--- a/output/tags.html
+++ b/output/tags.html
@@ -3,28 +3,28 @@
 <head>
         <meta charset="utf-8" />
         <title>渡りの日々. - Tags</title>
-        <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/main.css" />
+        <link rel="stylesheet" href="./theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
+                <h1><a href="./">渡りの日々.</a></h1>
                 <nav><ul>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/misc.html">misc</a></li>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">tech</a></li>
-                    <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
+                    <li><a href="./category/misc.html">misc</a></li>
+                    <li><a href="./category/shi-shi.html">時事</a></li>
+                    <li><a href="./category/tech.html">tech</a></li>
+                    <li><a href="./category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (2)</li>
+        <li><a href="./tag/news.html">news</a> (1)</li>
+        <li><a href="./tag/python.html">python</a> (1)</li>
+        <li><a href="./tag/shi-shi.html">時事</a> (1)</li>
+        <li><a href="./tag/tech.html">tech</a> (1)</li>
+        <li><a href="./tag/test.html">test</a> (2)</li>
     </ul>
 </section>
 
