add article 20200322 covid19-employment

--- a/output/tags.html
+++ b/output/tags.html
@@ -20,11 +20,13 @@
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
+        <li><a href="./tag/covid-19.html">covid-19</a> (1)</li>
         <li><a href="./tag/news.html">news</a> (1)</li>
         <li><a href="./tag/python.html">python</a> (1)</li>
-        <li><a href="./tag/shi-shi.html">時事</a> (1)</li>
+        <li><a href="./tag/shi-shi.html">時事</a> (2)</li>
         <li><a href="./tag/tech.html">tech</a> (1)</li>
         <li><a href="./tag/test.html">test</a> (2)</li>
+        <li><a href="./tag/zheng-zhi.html">政治</a> (1)</li>
     </ul>
 </section>
 
