add article 20200322_abc159

--- a/output/authors.html
+++ b/output/authors.html
@@ -12,7 +12,7 @@
                 <nav><ul>
                     <li><a href="./category/misc.html">misc</a></li>
                     <li><a href="./category/shi-shi.html">時事</a></li>
-                    <li><a href="./category/tech.html">tech</a></li>
+                    <li><a href="./category/tech.html">Tech</a></li>
                     <li><a href="./category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -20,7 +20,7 @@
 <section id="content" class="body">
     <h1>Authors on 渡りの日々.</h1>
     <ul>
-        <li><a href="./author/shosoya.html">s.hosoya</a> (7)</li>
+        <li><a href="./author/shosoya.html">s.hosoya</a> (8)</li>
     </ul>
 </section>
 
