--- a/output/tags.html
+++ b/output/tags.html
@@ -12,7 +12,7 @@
                 <nav><ul>
                     <li><a href="./category/misc.html">misc</a></li>
                     <li><a href="./category/shi-shi.html">時事</a></li>
-                    <li><a href="./category/tech.html">tech</a></li>
+                    <li><a href="./category/tech.html">Tech</a></li>
                     <li><a href="./category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -20,7 +20,10 @@
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
+        <li><a href="./tag/abc.html">abc</a> (1)</li>
+        <li><a href="./tag/atcoder.html">AtCoder</a> (1)</li>
         <li><a href="./tag/covid-19.html">covid-19</a> (1)</li>
+        <li><a href="./tag/jing-puro.html">競プロ</a> (1)</li>
         <li><a href="./tag/news.html">news</a> (1)</li>
         <li><a href="./tag/python.html">python</a> (1)</li>
         <li><a href="./tag/shi-shi.html">時事</a> (2)</li>
