--- a/output/categories.html
+++ b/output/categories.html
@@ -12,7 +12,7 @@
                 <nav><ul>
                     <li><a href="./category/misc.html">misc</a></li>
                     <li><a href="./category/shi-shi.html">時事</a></li>
-                    <li><a href="./category/tech.html">tech</a></li>
+                    <li><a href="./category/tech.html">Tech</a></li>
                     <li><a href="./category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -20,7 +20,7 @@
     <ul>
         <li><a href="./category/misc.html">misc</a> (1)</li>
         <li><a href="./category/shi-shi.html">時事</a> (3)</li>
-        <li><a href="./category/tech.html">tech</a> (1)</li>
+        <li><a href="./category/tech.html">Tech</a> (2)</li>
         <li><a href="./category/test.html">test</a> (2)</li>
     </ul>
         <section id="extras" class="body">
