--- a/output/categories.html
+++ b/output/categories.html
@@ -3,25 +3,26 @@
 <head>
         <meta charset="utf-8" />
         <title>渡りの日々. - Categories</title>
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="./">渡りの日々.</a></h1>
+                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
-                    <li><a href="./category/misc.html">misc</a></li>
-                    <li><a href="./category/shi-shi.html">時事</a></li>
-                    <li><a href="./category/tech.html">Tech</a></li>
-                    <li><a href="./category/test.html">test</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/pages/about.html">免責事項</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/misc.html">misc</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">Tech</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on 渡りの日々.</h1>
     <ul>
-        <li><a href="./category/misc.html">misc</a> (1)</li>
-        <li><a href="./category/shi-shi.html">時事</a> (3)</li>
-        <li><a href="./category/tech.html">Tech</a> (2)</li>
-        <li><a href="./category/test.html">test</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/misc.html">misc</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a> (3)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">Tech</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a> (2)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="social">
