add article 20200324_ac_practice.md

--- a/output/tags.html
+++ b/output/tags.html
@@ -21,11 +21,12 @@
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/abc.html">abc</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/abc.html">abc</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/covid-19.html">covid-19</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
