--- a/output/tags.html
+++ b/output/tags.html
@@ -29,6 +29,7 @@
         <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi-zheng-zhi-niyusu-covid19.html">時事、政治、ニュース、covid19</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/zheng-zhi.html">政治</a> (1)</li>
