--- a/output/tags.html
+++ b/output/tags.html
@@ -24,15 +24,16 @@
         <li><a href="https://blog.watarinohibi.tokyo/tag/abc.html">abc</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/covid-19.html">covid-19</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/covid19.html">covid19</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (2)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/niyusu.html">ニュース</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (2)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi-zheng-zhi-niyusu-covid19.html">時事、政治、ニュース、covid19</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (3)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (2)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/zheng-zhi.html">政治</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/zheng-zhi.html">政治</a> (2)</li>
     </ul>
 </section>
 
