add article 20200329_ac_practice

--- a/output/tags.html
+++ b/output/tags.html
@@ -22,13 +22,14 @@
     <h1>Tags for 渡りの日々.</h1>
     <ul>
         <li><a href="https://blog.watarinohibi.tokyo/tag/abc.html">abc</a> (3)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (4)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/aoj.html">AOJ</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (5)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/covid-19.html">covid-19</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/covid19.html">covid19</a> (2)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (4)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (5)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/niyusu.html">ニュース</a> (2)</li>
-        <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (3)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (4)</li>
         <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
