--- a/output/tags.html
+++ b/output/tags.html
@@ -24,14 +24,18 @@
         <li><a href="./tag/abc.html">abc</a> (3)</li>
         <li><a href="./tag/aoj.html">AOJ</a> (1)</li>
         <li><a href="./tag/atcoder.html">AtCoder</a> (5)</li>
+        <li><a href="./tag/cai-pan.html">裁判</a> (1)</li>
+        <li><a href="./tag/coinhive.html">Coinhive</a> (1)</li>
         <li><a href="./tag/covid-19.html">covid-19</a> (1)</li>
         <li><a href="./tag/covid19.html">covid19</a> (3)</li>
+        <li><a href="./tag/hatsukaxie-hui.html">ハッカー協会</a> (1)</li>
+        <li><a href="./tag/ji-shu.html">技術</a> (1)</li>
         <li><a href="./tag/jing-puro.html">競プロ</a> (5)</li>
         <li><a href="./tag/news.html">news</a> (1)</li>
         <li><a href="./tag/niyusu.html">ニュース</a> (3)</li>
         <li><a href="./tag/puroguramingu.html">プログラミング</a> (3)</li>
         <li><a href="./tag/python.html">python</a> (1)</li>
-        <li><a href="./tag/shi-shi.html">時事</a> (5)</li>
+        <li><a href="./tag/shi-shi.html">時事</a> (6)</li>
         <li><a href="./tag/tech.html">tech</a> (1)</li>
         <li><a href="./tag/test.html">test</a> (2)</li>
         <li><a href="./tag/zheng-zhi.html">政治</a> (4)</li>
