--- a/output/tags.html
+++ b/output/tags.html
@@ -3,42 +3,42 @@
 <head>
         <meta charset="utf-8" />
         <title>渡りの日々. - Tags</title>
-        <link rel="stylesheet" href="./theme/css/main.css" />
+        <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="./">渡りの日々.</a></h1>
+                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
-                    <li><a href="./pages/about.html">免責事項</a></li>
-                    <li><a href="./category/misc.html">misc</a></li>
-                    <li><a href="./category/shi-shi.html">時事</a></li>
-                    <li><a href="./category/tech.html">Tech</a></li>
-                    <li><a href="./category/test.html">test</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/pages/about.html">免責事項</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/misc.html">misc</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">Tech</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for 渡りの日々.</h1>
     <ul>
-        <li><a href="./tag/abc.html">abc</a> (3)</li>
-        <li><a href="./tag/aoj.html">AOJ</a> (1)</li>
-        <li><a href="./tag/atcoder.html">AtCoder</a> (5)</li>
-        <li><a href="./tag/cai-pan.html">裁判</a> (1)</li>
-        <li><a href="./tag/coinhive.html">Coinhive</a> (1)</li>
-        <li><a href="./tag/covid-19.html">covid-19</a> (1)</li>
-        <li><a href="./tag/covid19.html">covid19</a> (3)</li>
-        <li><a href="./tag/hatsukaxie-hui.html">ハッカー協会</a> (1)</li>
-        <li><a href="./tag/ji-shu.html">技術</a> (1)</li>
-        <li><a href="./tag/jing-puro.html">競プロ</a> (5)</li>
-        <li><a href="./tag/news.html">news</a> (1)</li>
-        <li><a href="./tag/niyusu.html">ニュース</a> (3)</li>
-        <li><a href="./tag/puroguramingu.html">プログラミング</a> (3)</li>
-        <li><a href="./tag/python.html">python</a> (1)</li>
-        <li><a href="./tag/shi-shi.html">時事</a> (6)</li>
-        <li><a href="./tag/tech.html">tech</a> (1)</li>
-        <li><a href="./tag/test.html">test</a> (2)</li>
-        <li><a href="./tag/zheng-zhi.html">政治</a> (4)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/abc.html">abc</a> (3)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/aoj.html">AOJ</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/atcoder.html">AtCoder</a> (5)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/cai-pan.html">裁判</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/coinhive.html">Coinhive</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/covid-19.html">covid-19</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/covid19.html">covid19</a> (4)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/hatsukaxie-hui.html">ハッカー協会</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/ji-shu.html">技術</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/jing-puro.html">競プロ</a> (5)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/news.html">news</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/niyusu.html">ニュース</a> (4)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/puroguramingu.html">プログラミング</a> (3)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/python.html">python</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/shi-shi.html">時事</a> (7)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/tech.html">tech</a> (1)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/test.html">test</a> (2)</li>
+        <li><a href="https://blog.watarinohibi.tokyo/tag/zheng-zhi.html">政治</a> (5)</li>
     </ul>
 </section>
 
