--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -3,18 +3,18 @@
 <head>
         <meta charset="utf-8" />
         <title>免責事項</title>
-        <link rel="stylesheet" href="../theme/css/main.css" />
+        <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/main.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="../">渡りの日々.</a></h1>
+                <h1><a href="https://blog.watarinohibi.tokyo/">渡りの日々.</a></h1>
                 <nav><ul>
-                    <li class="active"><a href="../pages/about.html">免責事項</a></li>
-                    <li><a href="../category/misc.html">misc</a></li>
-                    <li><a href="../category/shi-shi.html">時事</a></li>
-                    <li><a href="../category/tech.html">Tech</a></li>
-                    <li><a href="../category/test.html">test</a></li>
+                    <li class="active"><a href="https://blog.watarinohibi.tokyo/pages/about.html">免責事項</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/misc.html">misc</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">時事</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/tech.html">Tech</a></li>
+                    <li><a href="https://blog.watarinohibi.tokyo/category/test.html">test</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
