add article 20200404 covid19 in tokyo

--- a/output/archives.html
+++ b/output/archives.html
@@ -104,41 +104,43 @@
 <h1>Archives for 渡りの日々.</h1>
 
 <dl>
-	<dt>Sat, 04 Apr 2020</dt>
+	<dt>土, 04  4月 2020</dt>
+	<dd><a href='posts/2020/04/04/covid19-tokyo-20200404'>COVID-19 in Tokyo 20200404</a></dd>
+	<dt>土, 04  4月 2020</dt>
 	<dd><a href='posts/2020/04/04/pelican-theme'>python-pelican に theme を導入する</a></dd>
-	<dt>Wed, 01 Apr 2020</dt>
+	<dt>水, 01  4月 2020</dt>
 	<dd><a href='posts/2020/04/01/covid19-tokyo-20200401'>COVID-19 in Tokyo 20200401</a></dd>
-	<dt>Tue, 31 Mar 2020</dt>
+	<dt>火, 31  3月 2020</dt>
 	<dd><a href='posts/2020/03/31/coinhiveopinion'>Coinhiveに関する意見陳述</a></dd>
-	<dt>Sun, 29 Mar 2020</dt>
+	<dt>日, 29  3月 2020</dt>
 	<dd><a href='posts/2020/03/29/covid19-tokyo-20200329'>COVID-19 in Tokyo 20200329</a></dd>
-	<dt>Sun, 29 Mar 2020</dt>
+	<dt>日, 29  3月 2020</dt>
 	<dd><a href='posts/2020/03/29/practice_20200329'>競プロ Practice 日記</a></dd>
-	<dt>Sat, 28 Mar 2020</dt>
+	<dt>土, 28  3月 2020</dt>
 	<dd><a href='posts/2020/03/28/abc160'>AtCoder Beginner Contest 160</a></dd>
-	<dt>Sat, 28 Mar 2020</dt>
+	<dt>土, 28  3月 2020</dt>
 	<dd><a href='posts/2020/03/28/gov_interview'>COVID-19 in Tokyo 20200328</a></dd>
-	<dt>Fri, 27 Mar 2020</dt>
+	<dt>金, 27  3月 2020</dt>
 	<dd><a href='posts/2020/03/27/practice_20200327'>AtCoder Practice 日記</a></dd>
-	<dt>Wed, 25 Mar 2020</dt>
+	<dt>水, 25  3月 2020</dt>
 	<dd><a href='posts/2020/03/25/covid19-tokyo'>COVID-19 in Tokyo</a></dd>
-	<dt>Tue, 24 Mar 2020</dt>
+	<dt>火, 24  3月 2020</dt>
 	<dd><a href='posts/2020/03/24/practice'>AtCoder Practice 日記</a></dd>
-	<dt>Sun, 22 Mar 2020</dt>
+	<dt>日, 22  3月 2020</dt>
 	<dd><a href='posts/2020/03/22/abc159'>AtCoder Beginner Contest 159</a></dd>
-	<dt>Sun, 22 Mar 2020</dt>
+	<dt>日, 22  3月 2020</dt>
 	<dd><a href='posts/2020/03/22/employment'>新型コロナウィルス流行における日米の雇用に対する文化の違い</a></dd>
-	<dt>Sat, 21 Mar 2020</dt>
+	<dt>土, 21  3月 2020</dt>
 	<dd><a href='posts/2020/03/21/wani'>「100日後に死ぬワニ」が終わったあとに始まった商売に関するもやもやについて</a></dd>
-	<dt>Fri, 20 Mar 2020</dt>
+	<dt>金, 20  3月 2020</dt>
 	<dd><a href='posts/2020/03/20/test'>投稿テスト用POST</a></dd>
-	<dt>Wed, 18 Mar 2020</dt>
+	<dt>水, 18  3月 2020</dt>
 	<dd><a href='posts/2020/03/18/kagawa'>香川県の「ネット・ゲーム依存症対策条例」について</a></dd>
-	<dt>Tue, 17 Mar 2020</dt>
+	<dt>火, 17  3月 2020</dt>
 	<dd><a href='posts/2020/03/17/about_this_blog'>このサイトの技術スタックについて</a></dd>
-	<dt>Mon, 16 Mar 2020</dt>
+	<dt>月, 16  3月 2020</dt>
 	<dd><a href='posts/2020/03/16/FirstPost'>最初の投稿</a></dd>
-	<dt>Sun, 15 Mar 2020</dt>
+	<dt>日, 15  3月 2020</dt>
 	<dd><a href='posts/2020/03/15/aboutthisblog'>このサイトの目的</a></dd>
 </dl>
 </section>
