--- a/output/archives.html
+++ b/output/archives.html
@@ -8,7 +8,7 @@
     <meta name="author" content="s.hosoya">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="https://blog.watarinohibi.tokyo/theme/css/bootstrap.dark.css" type="text/css" />
+    <link rel="stylesheet" href="./theme/css/bootstrap.dark.css" type="text/css" />
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -30,10 +30,10 @@
         font-size: 6pt;
      }
     </style>
-    <link href="https://blog.watarinohibi.tokyo/theme/css/bootstrap-responsive.dark.css" rel="stylesheet">
-        <link href="https://blog.watarinohibi.tokyo/theme/css/font-awesome.css" rel="stylesheet">
+    <link href="./theme/css/bootstrap-responsive.dark.css" rel="stylesheet">
+        <link href="./theme/css/font-awesome.css" rel="stylesheet">
 
-    <link href="https://blog.watarinohibi.tokyo/theme/css/pygments.css" rel="stylesheet">
+    <link href="./theme/css/pygments.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -41,12 +41,12 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="https://blog.watarinohibi.tokyo/theme/images/favicon.ico">
-    <link rel="apple-touch-icon" href="https://blog.watarinohibi.tokyo/theme/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://blog.watarinohibi.tokyo/theme/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://blog.watarinohibi.tokyo/theme/images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="./theme/images/favicon.ico">
+    <link rel="apple-touch-icon" href="./theme/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./theme/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./theme/images/apple-touch-icon-114x114.png">
 
-    <link href="https://blog.watarinohibi.tokyo/" type="application/atom+xml" rel="alternate" title="渡りの日々. ATOM Feed" />
+    <link href="./" type="application/atom+xml" rel="alternate" title="渡りの日々. ATOM Feed" />
 
   </head>
 
@@ -60,34 +60,34 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="https://blog.watarinohibi.tokyo/index.html">渡りの日々.</a>
+          <a class="brand" href="./index.html">渡りの日々.</a>
           <div class="nav-collapse">
             <ul class="nav">
-                <li><a href="https://blog.watarinohibi.tokyo/pages/about.html">免責事項</a></li>
+                <li><a href="./pages/about.html">免責事項</a></li>
                           <li class="divider-vertical"></li>
                   <li >
-                    <a href="https://blog.watarinohibi.tokyo/category/misc.html">
+                    <a href="./category/misc.html">
 						<i class="icon-folder-open icon-large"></i>misc
 					</a>
                   </li>
                   <li >
-                    <a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">
+                    <a href="./category/shi-shi.html">
 						<i class="icon-folder-open icon-large"></i>時事
 					</a>
                   </li>
                   <li >
-                    <a href="https://blog.watarinohibi.tokyo/category/tech.html">
+                    <a href="./category/tech.html">
 						<i class="icon-folder-open icon-large"></i>Tech
 					</a>
                   </li>
                   <li >
-                    <a href="https://blog.watarinohibi.tokyo/category/test.html">
+                    <a href="./category/test.html">
 						<i class="icon-folder-open icon-large"></i>test
 					</a>
                   </li>
 
                           <ul class="nav pull-right">
-                                <li><a href="https://blog.watarinohibi.tokyo/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                                <li><a href="./archives.html"><i class="icon-th-list"></i>Archives</a></li>
                           </ul>
 
             </ul>
@@ -104,43 +104,45 @@
 <h1>Archives for 渡りの日々.</h1>
 
 <dl>
-	<dt>土, 04  4月 2020</dt>
+	<dt>Sun, 05 Apr 2020</dt>
+	<dd><a href='posts/2020/04/05/abc161'>AtCoder Beginner Contest 160</a></dd>
+	<dt>Sat, 04 Apr 2020</dt>
 	<dd><a href='posts/2020/04/04/covid19-tokyo-20200404'>COVID-19 in Tokyo 20200404</a></dd>
-	<dt>土, 04  4月 2020</dt>
+	<dt>Sat, 04 Apr 2020</dt>
 	<dd><a href='posts/2020/04/04/pelican-theme'>python-pelican に theme を導入する</a></dd>
-	<dt>水, 01  4月 2020</dt>
+	<dt>Wed, 01 Apr 2020</dt>
 	<dd><a href='posts/2020/04/01/covid19-tokyo-20200401'>COVID-19 in Tokyo 20200401</a></dd>
-	<dt>火, 31  3月 2020</dt>
+	<dt>Tue, 31 Mar 2020</dt>
 	<dd><a href='posts/2020/03/31/coinhiveopinion'>Coinhiveに関する意見陳述</a></dd>
-	<dt>日, 29  3月 2020</dt>
+	<dt>Sun, 29 Mar 2020</dt>
 	<dd><a href='posts/2020/03/29/covid19-tokyo-20200329'>COVID-19 in Tokyo 20200329</a></dd>
-	<dt>日, 29  3月 2020</dt>
+	<dt>Sun, 29 Mar 2020</dt>
 	<dd><a href='posts/2020/03/29/practice_20200329'>競プロ Practice 日記</a></dd>
-	<dt>土, 28  3月 2020</dt>
+	<dt>Sat, 28 Mar 2020</dt>
 	<dd><a href='posts/2020/03/28/abc160'>AtCoder Beginner Contest 160</a></dd>
-	<dt>土, 28  3月 2020</dt>
+	<dt>Sat, 28 Mar 2020</dt>
 	<dd><a href='posts/2020/03/28/gov_interview'>COVID-19 in Tokyo 20200328</a></dd>
-	<dt>金, 27  3月 2020</dt>
+	<dt>Fri, 27 Mar 2020</dt>
 	<dd><a href='posts/2020/03/27/practice_20200327'>AtCoder Practice 日記</a></dd>
-	<dt>水, 25  3月 2020</dt>
+	<dt>Wed, 25 Mar 2020</dt>
 	<dd><a href='posts/2020/03/25/covid19-tokyo'>COVID-19 in Tokyo</a></dd>
-	<dt>火, 24  3月 2020</dt>
+	<dt>Tue, 24 Mar 2020</dt>
 	<dd><a href='posts/2020/03/24/practice'>AtCoder Practice 日記</a></dd>
-	<dt>日, 22  3月 2020</dt>
+	<dt>Sun, 22 Mar 2020</dt>
 	<dd><a href='posts/2020/03/22/abc159'>AtCoder Beginner Contest 159</a></dd>
-	<dt>日, 22  3月 2020</dt>
+	<dt>Sun, 22 Mar 2020</dt>
 	<dd><a href='posts/2020/03/22/employment'>新型コロナウィルス流行における日米の雇用に対する文化の違い</a></dd>
-	<dt>土, 21  3月 2020</dt>
+	<dt>Sat, 21 Mar 2020</dt>
 	<dd><a href='posts/2020/03/21/wani'>「100日後に死ぬワニ」が終わったあとに始まった商売に関するもやもやについて</a></dd>
-	<dt>金, 20  3月 2020</dt>
+	<dt>Fri, 20 Mar 2020</dt>
 	<dd><a href='posts/2020/03/20/test'>投稿テスト用POST</a></dd>
-	<dt>水, 18  3月 2020</dt>
+	<dt>Wed, 18 Mar 2020</dt>
 	<dd><a href='posts/2020/03/18/kagawa'>香川県の「ネット・ゲーム依存症対策条例」について</a></dd>
-	<dt>火, 17  3月 2020</dt>
+	<dt>Tue, 17 Mar 2020</dt>
 	<dd><a href='posts/2020/03/17/about_this_blog'>このサイトの技術スタックについて</a></dd>
-	<dt>月, 16  3月 2020</dt>
+	<dt>Mon, 16 Mar 2020</dt>
 	<dd><a href='posts/2020/03/16/FirstPost'>最初の投稿</a></dd>
-	<dt>日, 15  3月 2020</dt>
+	<dt>Sun, 15 Mar 2020</dt>
 	<dd><a href='posts/2020/03/15/aboutthisblog'>このサイトの目的</a></dd>
 </dl>
 </section>
@@ -149,28 +151,28 @@
                 <div class="span3 well sidebar-nav" id="sidebar">
 <ul class="nav nav-list">
 <li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
-<li><a href="https://blog.watarinohibi.tokyo/" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
+<li><a href="./" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
     <li><a href="https://twitter.com/syoutin"><i class="icon-twitter-sign icon-large"></i>twitter</a></li>
     <li><a href="https://github.com/mollinaca"><i class="icon-github-sign icon-large"></i>github</a></li>
 
 <li class="nav-header"><h4><i class="icon-folder-close icon-large"></i>Categories</h4></li>
 <li>
-<a href="https://blog.watarinohibi.tokyo/category/misc.html">
+<a href="./category/misc.html">
     <i class="icon-folder-open icon-large"></i>misc
 </a>
 </li>
 <li>
-<a href="https://blog.watarinohibi.tokyo/category/shi-shi.html">
+<a href="./category/shi-shi.html">
     <i class="icon-folder-open icon-large"></i>時事
 </a>
 </li>
 <li>
-<a href="https://blog.watarinohibi.tokyo/category/tech.html">
+<a href="./category/tech.html">
     <i class="icon-folder-open icon-large"></i>Tech
 </a>
 </li>
 <li>
-<a href="https://blog.watarinohibi.tokyo/category/test.html">
+<a href="./category/test.html">
     <i class="icon-folder-open icon-large"></i>test
 </a>
 </li>
@@ -200,7 +202,7 @@
 
     <!-- Le javascript -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://blog.watarinohibi.tokyo/theme/js/jquery-1.7.2.min.js"></script>
-    <script src="https://blog.watarinohibi.tokyo/theme/js/bootstrap.min.js"></script>
+    <script src="./theme/js/jquery-1.7.2.min.js"></script>
+    <script src="./theme/js/bootstrap.min.js"></script>
   </body>
 </html>
