modify article 20200412_cnetos8 modify tag

--- a/output/tags.html
+++ b/output/tags.html
@@ -111,7 +111,7 @@
           <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (1)</li>
           <li><a href="./tag/atcoder.html">AtCoder</a> (10)</li>
           <li><a href="./tag/aws.html">AWS</a> (1)</li>
-          <li><a href="./tag/centos8.html">CentOs8</a> (1)</li>
+          <li><a href="./tag/centos8.html">CentOS8</a> (1)</li>
           <li><a href="./tag/coinhive.html">coinhive</a> (1)</li>
           <li><a href="./tag/covid19.html">covid19</a> (12)</li>
           <li><a href="./tag/current_news.html">時事</a> (2)</li>
