--- a/output/tags.html
+++ b/output/tags.html
@@ -123,7 +123,7 @@
   </header>
   <div>
     <ul class="list">          <li><a href="./tag/abc.html">ABC</a> (11)</li>
-          <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (1)</li>
+          <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (2)</li>
           <li><a href="./tag/atcoder.html">AtCoder</a> (11)</li>
           <li><a href="./tag/aws.html">AWS</a> (1)</li>
           <li><a href="./tag/centos8.html">CentOS8</a> (1)</li>
@@ -134,14 +134,16 @@
           <li><a href="./tag/game.html">ゲーム</a> (1)</li>
           <li><a href="./tag/github.html">Github</a> (1)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (11)</li>
-          <li><a href="./tag/linux.html">Linux</a> (1)</li>
+          <li><a href="./tag/linux.html">Linux</a> (2)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
           <li><a href="./tag/news.html">ニュース</a> (11)</li>
           <li><a href="./tag/pelican.html">pelican</a> (2)</li>
+          <li><a href="./tag/pipenv.html">pipenv</a> (1)</li>
           <li><a href="./tag/politics.html">政治</a> (10)</li>
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
-          <li><a href="./tag/python.html">python</a> (2)</li>
+          <li><a href="./tag/pyenv.html">pyenv</a> (1)</li>
+          <li><a href="./tag/python.html">python</a> (3)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
           <li><a href="./tag/tag_test.html">タグテスト</a> (1)</li>
