--- a/output/tags.html
+++ b/output/tags.html
@@ -123,7 +123,7 @@
   </header>
   <div>
     <ul class="list">          <li><a href="./tag/abc.html">ABC</a> (11)</li>
-          <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (2)</li>
+          <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (3)</li>
           <li><a href="./tag/atcoder.html">AtCoder</a> (12)</li>
           <li><a href="./tag/aws.html">AWS</a> (1)</li>
           <li><a href="./tag/centos8.html">CentOS8</a> (1)</li>
@@ -133,8 +133,9 @@
           <li><a href="./tag/diary.html">雑記</a> (2)</li>
           <li><a href="./tag/game.html">ゲーム</a> (1)</li>
           <li><a href="./tag/github.html">Github</a> (1)</li>
+          <li><a href="./tag/golang.html">golang</a> (1)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (12)</li>
-          <li><a href="./tag/linux.html">Linux</a> (2)</li>
+          <li><a href="./tag/linux.html">Linux</a> (3)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
           <li><a href="./tag/news.html">ニュース</a> (11)</li>
