--- a/output/categories.html
+++ b/output/categories.html
@@ -124,6 +124,9 @@
   <div>
     <ul class="list">
       <li>
+        <a href="./category/misc.html">Misc</a> (1)
+      </li>
+      <li>
         <a href="./category/miscellaneous notes.html">miscellaneous notes</a> (2)
       </li>
       <li>
