add article 20200430 book

--- a/output/tags.html
+++ b/output/tags.html
@@ -145,6 +145,7 @@
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
           <li><a href="./tag/pyenv.html">pyenv</a> (1)</li>
           <li><a href="./tag/python.html">python</a> (3)</li>
+          <li><a href="./tag/shu ping.html">書評</a> (1)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
           <li><a href="./tag/tag_test.html">タグテスト</a> (1)</li>
