--- a/output/tags.html
+++ b/output/tags.html
@@ -130,24 +130,25 @@
           <li><a href="./tag/centos8.html">CentOS8</a> (2)</li>
           <li><a href="./tag/coinhive.html">coinhive</a> (1)</li>
           <li><a href="./tag/covid19.html">covid19</a> (13)</li>
+          <li><a href="./tag/cron.html">cron</a> (1)</li>
           <li><a href="./tag/current_news.html">時事</a> (2)</li>
           <li><a href="./tag/diary.html">雑記</a> (2)</li>
           <li><a href="./tag/game.html">ゲーム</a> (1)</li>
           <li><a href="./tag/github.html">Github</a> (1)</li>
           <li><a href="./tag/golang.html">golang</a> (1)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (14)</li>
-          <li><a href="./tag/linux.html">Linux</a> (4)</li>
+          <li><a href="./tag/linux.html">Linux</a> (5)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/mysql.html">mysql</a> (1)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
           <li><a href="./tag/news.html">ニュース</a> (12)</li>
           <li><a href="./tag/pelican.html">pelican</a> (2)</li>
           <li><a href="./tag/php.html">php</a> (1)</li>
-          <li><a href="./tag/pipenv.html">pipenv</a> (1)</li>
+          <li><a href="./tag/pipenv.html">pipenv</a> (2)</li>
           <li><a href="./tag/politics.html">政治</a> (11)</li>
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
-          <li><a href="./tag/pyenv.html">pyenv</a> (1)</li>
-          <li><a href="./tag/python.html">python</a> (3)</li>
+          <li><a href="./tag/pyenv.html">pyenv</a> (2)</li>
+          <li><a href="./tag/python.html">Python</a> (4)</li>
           <li><a href="./tag/shu ping.html">書評</a> (1)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
