add article 20200504 router_latency

--- a/output/tags.html
+++ b/output/tags.html
@@ -137,10 +137,12 @@
           <li><a href="./tag/github.html">Github</a> (1)</li>
           <li><a href="./tag/golang.html">golang</a> (1)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (14)</li>
+          <li><a href="./tag/latency.html">Latency</a> (1)</li>
           <li><a href="./tag/linux.html">Linux</a> (5)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/mysql.html">mysql</a> (1)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
+          <li><a href="./tag/network.html">Network</a> (1)</li>
           <li><a href="./tag/news.html">ニュース</a> (12)</li>
           <li><a href="./tag/pelican.html">pelican</a> (2)</li>
           <li><a href="./tag/php.html">php</a> (1)</li>
@@ -158,6 +160,7 @@
           <li><a href="./tag/virtualbox.html">virtualBox</a> (1)</li>
           <li><a href="./tag/vm.html">VM</a> (1)</li>
           <li><a href="./tag/wordpress.html">WordPress</a> (1)</li>
+          <li><a href="./tag/zi zhai pchuan jing.html">自宅PC環境</a> (1)</li>
     </ul>
   </div>
 </article>
