add article 20200520 disk add xfs

--- a/output/tags.html
+++ b/output/tags.html
@@ -128,7 +128,7 @@
           <li><a href="./tag/arugorizumu.html">アルゴリズム</a> (3)</li>
           <li><a href="./tag/atcoder.html">AtCoder</a> (17)</li>
           <li><a href="./tag/aws.html">AWS</a> (5)</li>
-          <li><a href="./tag/centos8.html">CentOS8</a> (2)</li>
+          <li><a href="./tag/centos8.html">CentOS8</a> (3)</li>
           <li><a href="./tag/coinhive.html">coinhive</a> (1)</li>
           <li><a href="./tag/covid19.html">covid19</a> (13)</li>
           <li><a href="./tag/cron.html">cron</a> (1)</li>
@@ -142,7 +142,7 @@
           <li><a href="./tag/hanipotsuto.html">ハニーポット</a> (4)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (20)</li>
           <li><a href="./tag/latency.html">Latency</a> (1)</li>
-          <li><a href="./tag/linux.html">Linux</a> (5)</li>
+          <li><a href="./tag/linux.html">Linux</a> (6)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/mysql.html">mysql</a> (1)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
@@ -164,6 +164,7 @@
           <li><a href="./tag/virtualbox.html">virtualBox</a> (1)</li>
           <li><a href="./tag/vm.html">VM</a> (1)</li>
           <li><a href="./tag/wordpress.html">WordPress</a> (1)</li>
+          <li><a href="./tag/xfs.html">xfs</a> (1)</li>
           <li><a href="./tag/zi zhai pchuan jing.html">自宅PC環境</a> (1)</li>
     </ul>
   </div>
