add article 20200523 past3

--- a/output/tags.html
+++ b/output/tags.html
@@ -126,7 +126,7 @@
           <li><a href="./tag/amazonlinux.html">AmazonLinux</a> (3)</li>
           <li><a href="./tag/apache.html">apache</a> (1)</li>
           <li><a href="./tag/arugorizumu.html">アルゴリズム</a> (3)</li>
-          <li><a href="./tag/atcoder.html">AtCoder</a> (17)</li>
+          <li><a href="./tag/atcoder.html">AtCoder</a> (18)</li>
           <li><a href="./tag/aws.html">AWS</a> (5)</li>
           <li><a href="./tag/centos8.html">CentOS8</a> (3)</li>
           <li><a href="./tag/coinhive.html">coinhive</a> (1)</li>
@@ -148,6 +148,7 @@
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
           <li><a href="./tag/network.html">Network</a> (1)</li>
           <li><a href="./tag/news.html">ニュース</a> (13)</li>
+          <li><a href="./tag/past.html">PAST</a> (1)</li>
           <li><a href="./tag/pelican.html">pelican</a> (2)</li>
           <li><a href="./tag/php.html">php</a> (1)</li>
           <li><a href="./tag/pipenv.html">pipenv</a> (2)</li>
