--- a/output/categories.html
+++ b/output/categories.html
@@ -127,6 +127,9 @@
         <a href="./category/book.html">Book</a> (1)
       </li>
       <li>
+        <a href="./category/diary.html">雑記</a> (1)
+      </li>
+      <li>
         <a href="./category/misc.html">Misc</a> (1)
       </li>
       <li>
