--- a/output/tags.html
+++ b/output/tags.html
@@ -156,7 +156,7 @@
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
           <li><a href="./tag/pyenv.html">pyenv</a> (2)</li>
           <li><a href="./tag/python.html">Python</a> (8)</li>
-          <li><a href="./tag/shu ping.html">書評</a> (1)</li>
+          <li><a href="./tag/shu ping.html">書評</a> (2)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
           <li><a href="./tag/tag_test.html">タグテスト</a> (1)</li>
@@ -166,6 +166,7 @@
           <li><a href="./tag/vm.html">VM</a> (1)</li>
           <li><a href="./tag/wordpress.html">WordPress</a> (1)</li>
           <li><a href="./tag/xfs.html">xfs</a> (1)</li>
+          <li><a href="./tag/xiao chuan yi shui.html">小川一水</a> (2)</li>
           <li><a href="./tag/zi zhai pchuan jing.html">自宅PC環境</a> (1)</li>
     </ul>
   </div>
