--- a/output/tags.html
+++ b/output/tags.html
@@ -134,6 +134,7 @@
           <li><a href="./tag/cron.html">cron</a> (1)</li>
           <li><a href="./tag/current_news.html">時事</a> (2)</li>
           <li><a href="./tag/diary.html">雑記</a> (5)</li>
+          <li><a href="./tag/dns.html">DNS</a> (1)</li>
           <li><a href="./tag/docker.html">docker</a> (1)</li>
           <li><a href="./tag/ec2.html">EC2</a> (4)</li>
           <li><a href="./tag/game.html">ゲーム</a> (1)</li>
@@ -157,7 +158,7 @@
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
           <li><a href="./tag/prometheus.html">prometheus</a> (1)</li>
           <li><a href="./tag/pyenv.html">pyenv</a> (2)</li>
-          <li><a href="./tag/python.html">Python</a> (8)</li>
+          <li><a href="./tag/python.html">Python</a> (9)</li>
           <li><a href="./tag/shu ping.html">書評</a> (3)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
