--- a/output/tags.html
+++ b/output/tags.html
@@ -144,7 +144,7 @@
           <li><a href="./tag/hanipotsuto.html">ハニーポット</a> (4)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (23)</li>
           <li><a href="./tag/latency.html">Latency</a> (1)</li>
-          <li><a href="./tag/linux.html">Linux</a> (6)</li>
+          <li><a href="./tag/linux.html">Linux</a> (7)</li>
           <li><a href="./tag/misc.html">misc</a> (2)</li>
           <li><a href="./tag/mysql.html">mysql</a> (1)</li>
           <li><a href="./tag/netlify.html">Netlify</a> (1)</li>
@@ -158,7 +158,9 @@
           <li><a href="./tag/postfix.html">Postfix</a> (1)</li>
           <li><a href="./tag/prometheus.html">prometheus</a> (1)</li>
           <li><a href="./tag/pyenv.html">pyenv</a> (2)</li>
-          <li><a href="./tag/python.html">Python</a> (9)</li>
+          <li><a href="./tag/python.html">python</a> (10)</li>
+          <li><a href="./tag/raspberrypi.html">RaspberryPi</a> (1)</li>
+          <li><a href="./tag/raspbian.html">Raspbian</a> (1)</li>
           <li><a href="./tag/shu ping.html">書評</a> (5)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
