20200705 add article sendgrid&zapier

--- a/output/tags.html
+++ b/output/tags.html
@@ -161,6 +161,7 @@
           <li><a href="./tag/python.html">python</a> (10)</li>
           <li><a href="./tag/raspberrypi.html">RaspberryPi</a> (1)</li>
           <li><a href="./tag/raspbian.html">Raspbian</a> (1)</li>
+          <li><a href="./tag/sendgrid.html">SendGrid</a> (1)</li>
           <li><a href="./tag/shu ping.html">書評</a> (5)</li>
           <li><a href="./tag/sns.html">SNS</a> (1)</li>
           <li><a href="./tag/social.html">social</a> (1)</li>
@@ -172,6 +173,7 @@
           <li><a href="./tag/wordpress.html">WordPress</a> (1)</li>
           <li><a href="./tag/xfs.html">xfs</a> (1)</li>
           <li><a href="./tag/xiao chuan yi shui.html">小川一水</a> (5)</li>
+          <li><a href="./tag/zapier.html">Zapier</a> (1)</li>
           <li><a href="./tag/zi zhai pchuan jing.html">自宅PC環境</a> (1)</li>
     </ul>
   </div>
