add article 20200709 misc

--- a/output/tags.html
+++ b/output/tags.html
@@ -133,7 +133,7 @@
           <li><a href="./tag/covid19.html">covid19</a> (13)</li>
           <li><a href="./tag/cron.html">cron</a> (1)</li>
           <li><a href="./tag/current_news.html">時事</a> (2)</li>
-          <li><a href="./tag/diary.html">雑記</a> (8)</li>
+          <li><a href="./tag/diary.html">雑記</a> (9)</li>
           <li><a href="./tag/dns.html">DNS</a> (1)</li>
           <li><a href="./tag/docker.html">docker</a> (1)</li>
           <li><a href="./tag/ec2.html">EC2</a> (4)</li>
@@ -142,6 +142,7 @@
           <li><a href="./tag/githubpages.html">GitHubPages</a> (4)</li>
           <li><a href="./tag/golang.html">golang</a> (1)</li>
           <li><a href="./tag/hanipotsuto.html">ハニーポット</a> (4)</li>
+          <li><a href="./tag/integromat.html">Integromat</a> (1)</li>
           <li><a href="./tag/jing ji p.html">競技プログラミング</a> (24)</li>
           <li><a href="./tag/latency.html">Latency</a> (1)</li>
           <li><a href="./tag/linux.html">Linux</a> (7)</li>
